--- a/rca/project_styleguide/templates/patterns/molecules/no-results/no-results.html
+++ b/rca/project_styleguide/templates/patterns/molecules/no-results/no-results.html
@@ -1,7 +1,9 @@
 <div class="no-results">
     <div class="no-results__container">
-        <h2 class="no-results__heading heading heading--four">Sorry, no projects found.</h2>
-        <p class="no-results__info heading heading--five">Reset filters to see all projects.</p>
-        {% include 'patterns/atoms/link-primary/link-primary--link.html' with value=reset_link %}
+        <h2 class="no-results__heading heading heading--four">We couldn’t find any matching results</h2>
+        <p class="no-results__info heading heading--five">Select Reset to start again or use the main site search to find what you’re looking for.</p>
+        <div class="no-results__action">
+            {% include "patterns/atoms/reset/reset.html" with value=reset_link modifier='primary' %}
+        </div>
     </div>
 </div>
