--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -86,6 +86,7 @@
 @import 'components/related-content';
 @import 'components/related-links';
 @import 'components/research-centre-overview';
+@import 'components/reset';
 @import 'components/responsive-object';
 @import 'components/results';
 @import 'components/results-total';
