--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -87,8 +87,7 @@
                     </div>
                 {% endif %}
 
-                {% comment %} {% if featured_project and page.results %} {% endcomment %}
-                {% if featured_project %}
+                {% if featured_project and show_featured_project %}
                     <div class="section__row">
                         {% include "patterns/organisms/image-video-block/image-video-block.html" with heading=false subheading=featured_project.title meta_heading=featured_project.introduction image=featured_project.hero_image has_meta=True meta_copy=featured_project.listing_summary href=featured_project.url caption=false video=false %}
                     </div>
