Implements default landing page

--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--dev-all-fields.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--dev-all-fields.html
@@ -37,9 +37,9 @@
                             <h2 class="introduction__text section__heading heading heading--five">
                                 {{ page.introduction }}
                             </h2>
-                            {% if page.introduction_link %}
-                                <a href="{{ page.introduction_link }}" class="introduction__link link link--tertiary link--link">
-                                    <span class="link__label">{{ page.introduction_link_text }}</span>
+                            {% if about_page %}
+                                <a href="{{ about_page.get_link_url }}" class="introduction__link link link--tertiary link--link">
+                                    <span class="link__label">{{ about_page.get_link_text }}</span>
                                     <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                                 </a>
                             {% endif %}
@@ -50,7 +50,7 @@
 
         <div class="page__content landing-page">
 
-            {% if page.feature_image or page.enterprise_highlights %}
+            {% if page.feature_image or highlight_pages %}
                 <section class="landing-page__top section section--start bg bg--dark">
 
                     {% if page.feature_image %}
@@ -75,6 +75,7 @@
                                         <span class="link__label">See all enterprise projects</span>
                                         <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                                     </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -87,10 +88,10 @@
                 </section>
             {% endif %}
 
-            {% if page.enterprise_rca or page.related_research_centres_schools %}
+            {% if related_pages or page.related_research_centres_schools %}
                 <section class="landing-page__middle section section--start section--opposite-notch bg bg--light">
 
-                    {% if page.enterprise_rca %}
+                    {% if related_pages %}
                         <div class="section__row research-spaces">
                             <div class="section__header section__header--bottom-space grid">
                                 <h2 class="section__heading section__heading--tight heading heading--two">
@@ -101,7 +102,7 @@
                                 </div>
                             </div>
                             <div class="section__content grid">
-                                {% include "patterns/organisms/staggered-cards/staggered-cards.html" with staggered_cards=page.enterprise_rca %}
+                                {% include "patterns/organisms/staggered-cards/staggered-cards.html" with staggered_cards=related_pages %}
                             </div>
                         </div>
                     {% endif %}
@@ -118,11 +119,10 @@
 
                 </section>
             {% endif %}
-
-            {% if page.middle_feature_image %}
+            {% if featured_image %}
                 <section class="section bg bg--dark">
                     <div class="section__row section__row--first section__row--last">
-                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=false curriculum=false subheading=false has_meta=True heading=page.middle_feature_heading meta_heading=page.middle_feature_meta_heading meta_copy=page.middle_feature_meta_text href=page.middle_feature_meta_link image=page.middle_feature_image modifier="tight-heading" %}
+                        {% include "patterns/organisms/image-video-block/image-video-block.html" with modal=false curriculum=false subheading=false has_meta=True heading=featured_image.title meta_heading=featured_image.subtitle meta_copy=featured_image.description href=featured_image.get_link_url image=featured_image.image modifier="tight-heading" %}
                     </div>
 
                     <div class="section__notch">
@@ -131,15 +131,15 @@
                 </section>
             {% endif %}
 
-            {% if page.related_courses %}
+            {% if related_programmes %}
                 <section class="section section--opposite-notch bg bg--light">
                     <div class="section__row section__row--first section__row--last-large">
-                        {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=page.related_courses title=page.related_courses_title modifier="after-action related-content--meta-new-line" %}
-                        {% if page.related_courses_link %}
+                        {% include "patterns/molecules/relatedcontent/relatedprogrammes.html" with related_sections=related_programmes title=page.related_programmes_title modifier="after-action related-content--meta-new-line" %}
+                        {% if page.related_programmes_link %}
                             <div class="grid">
                                 <div class="section__action">
-                                    <a class="link link--secondary link--link body body--one" href="{{ page.related_courses_link }}">
-                                        <span class="link__label">{{ page.related_courses_link_text }}</span>
+                                    <a class="link link--secondary link--link body body--one" href="{{ page.related_programmes_link.all.first.get_link_url }}">
+                                        <span class="link__label">{{ page.related_programmes_link.all.first.get_link_text }}</span>
                                         <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                                     </a>
                                 </div>
