--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -5,6 +5,7 @@
         <div class="section__row grid">
             <h2 class="related-content__heading heading heading--two">{{ title }}</h2>
         </div>
+
     {% endif %}
 
     {% for related_section in related_sections %}
@@ -15,8 +16,8 @@
                 <div class="section__row grid">
                     {% if programme_page_global_fields.related_content_subtitle %}
                         <h3 class="related-content__subheading heading heading--five">{{ programme_page_global_fields.related_content_subtitle }}</h3>
-                    {% elif related_section.title %}
-                        <h3 class="related-content__subheading heading heading--five">{{ related_section.title }}</h3>
+                    {% elif related_section.title or related_section.subtitle %}
+                        <h3 class="related-content__subheading heading heading--five">{% firstof related_section.subtitle related_section.title %}</h3>
                     {% endif %}
                 </div>
             {% endif %}
