--- a/rca/static_src/sass/components/_sticky-filter-bar.scss
+++ b/rca/static_src/sass/components/_sticky-filter-bar.scss
@@ -14,7 +14,7 @@
         // include base grid lines until actively sticky
 
         @include media-query(large) {
-            @include z-index(sticky-nav-bar);
+            @include z-index(sticky-nav-bar-header);
             // Make padding above / below bar even
             transform: translate3d(0, -10px, 0);
         }
