--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -44,6 +44,8 @@
 @import 'components/featured-alumni';
 @import 'components/fees';
 @import 'components/filter-bar';
+@import 'components/filter-tab-options';
+@import 'components/filter-takeover';
 @import 'components/footer-link-item';
 @import 'components/form';
 @import 'components/form-item';
