--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -32,21 +32,14 @@
             </div>
         </header>
 
-        <div class="page__content js-sticky-point js-sticky-point--top">
+        <div class="page__content js-sticky-point js-sticky-point--top js-tabs">
 
             <section class="section section--opposite-notch sticky-filter-bar">
 
                 <div class="section__row bg bg--dark filter-bar filter-bar--large">
                     <div class="section__notch section__notch--opposite">
-                        <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium tabs js-tabs">
+                        <div class="section__notch-fill section__notch-fill--content-height section__notch-fill--fourth-col section__notch-fill--second-col@medium">
                             {% include "patterns/molecules/categories-tablist/categories-tablist.html" with value=page.filters modifier="large" reset=True %}
-
-                            {% for item in page.filters.items %}
-                                <div class="tabs__panel js-tab-panel tabs__panel--hidden" id="{{ item.tab_title|slugify }}" role="tabpanel" aria-labelledby="{{ item.tab_title|slugify }}">
-                                    {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" with filter_options=item.children %}
-                                </div>
-                            {% endfor %}
-                            
                         </div>
                     </div>
                 </div>
@@ -61,6 +54,16 @@
                 </div>
 
             </section>
+
+            <div class="filter-takeover bg bg--light">
+                <div class="filter-takeover__container">
+                    {% for item in page.filters.items %}
+                        <div class="tabs__panel js-tab-panel tabs__panel--hidden" id="{{ item.tab_title|slugify }}" role="tabpanel" aria-labelledby="tab-{{ item.tab_title|slugify }}">
+                            {% include "patterns/molecules/filter-tab-options/filter-tab-options.html" with filter_options=item.children %}
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
 
             <section class="section bg bg--light">
 
