--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -35,7 +35,7 @@ $font--secondary: 'Benton Sans Medium', 'Helvetica Neue', Arial, Helvetica,
     Sans-Serif;
 
 // Font weights
-// Now handled by font family so both 500
+// Now handled by font family due to limitations of third party font service
 $weight--medium: 500;
 $weight--normal: 500;
 
