--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -34,7 +34,7 @@
 
         <div class="page__content js-sticky-point js-sticky-point--top js-tabs">
 
-            <section class="section section--opposite-notch sticky-filter-bar">
+            <section class="section section--opposite-notch sticky-filter-bar" data-filter-bar>
 
                 <div class="section__row bg bg--dark filter-bar filter-bar--large">
                     <div class="section__notch section__notch--opposite">
