--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -83,6 +83,7 @@
 @import 'components/programme-results';
 @import 'components/programme-teaser';
 @import 'components/programmes-explorer';
+@import 'components/project-filters';
 @import 'components/project-overview';
 @import 'components/proposition-statement';
 @import 'components/related-content';
