--- a/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
+++ b/rca/project_styleguide/templates/patterns/molecules/filter-tab-options/filter-tab-options.html
@@ -12,7 +12,7 @@
                 </button>
                 <div class="filter-tab-options__heading-options">
                     <h3 class="filter-tab-options__category-heading heading heading--five">{{ item.tab_title }}</h3>
-                    <a class="filter-tab-options__clear-link body body--two" href="#" data-filters-clear-category>Clear</a>
+                    <a class="filter-tab-options__clear-link body body--two hidden" href="#" data-filters-clear-category>Clear</a>
                 </div>
             </div>
         {% endif %}
@@ -20,16 +20,16 @@
         <div class="filter-tab-options__content">
             {% for item in filter_options %}
                 <div class="filter-tab-options__item layout__span-two layout__@large-span-one">
-                    <a href="#" class="filter-tab-options__link body body--one">{{ item.title }}</a>
+                    <a href="#" class="filter-tab-options__link body body--one" data-filter-option>{{ item.title }}</a>
                 </div>
             {% endfor %}
             <div class="filter-tab-options__clear layout__start-one layout__span-two layout__@large-span-three">
-                <a class="filter-tab-options__clear-link body body--two" href="#" data-filters-clear-category>Clear</a>
+                <a class="filter-tab-options__clear-link body body--two hidden" href="#" data-filters-clear-category>Clear</a>
             </div>
         </div>
 
         <div class="filter-tab-options__footer layout__start-one layout__span-two layout__@large-start-two layout__@large-span-four">
-            {% include "patterns/atoms/reset/reset.html" %}
+            {% include "patterns/atoms/link-primary/link-primary.html" with value=page.filter_action %}
         </div>
 
     </div>
