--- a/rca/static_src/sass/components/_filter-bar.scss
+++ b/rca/static_src/sass/components/_filter-bar.scss
@@ -1,5 +1,15 @@
 .filter-bar {
+    @include z-index(sticky-nav-bar);
     $root: &;
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transition: transform $transition;
+
+    @include media-query(large) {
+        @include z-index(under-gridlines);
+    }
 
     &--small {
         position: relative;
@@ -22,6 +32,14 @@
 
         @include media-query(large) {
             display: block;
+        }
+    }
+
+    &--stuck {
+        @include media-query(large) {
+            @include z-index(sticky-nav-bar-header);
+            // Make padding above / below bar even
+            transform: translate3d(0, -10px, 0);
         }
     }
 
@@ -49,6 +67,14 @@
                 color: $color--white;
             }
         }
+
+        .section__notch-fill {
+            background-color: $color--white;
+
+            &::before {
+                background-color: $color--white;
+            }
+        }
     }
 
     &.bg--light {
@@ -61,26 +87,36 @@
                 color: $color--black;
             }
         }
-    }
-
-    .sticky-bar & {
-        background-color: $color--black;
-
-        #{$root}__link {
-            color: $color--white;
-        }
 
         .section__notch-fill {
-            background-color: $color--black;
+            background-color: $color--white;
 
             &::before {
-                background-color: $color--black;
+                background-color: $color--white;
             }
         }
     }
 
     // When headroom mini header is also active
-    .sticky-bar.headroom--pinned & {
-        border-top: 1px solid $color--grid-line-light;
+    .headroom--pinned & {
+        &--stuck {
+            border-top: 1px solid $color--grid-line-light;
+            transform: translate3d(0, $mini-header-height, 0);
+
+            @include media-query(large) {
+                transform: translate3d(0, $mini-header-height, 0);
+            }
+        }
+    }
+
+    .project-filters & {
+        @include media-query(large) {
+            @include z-index(modal-controls);
+            position: fixed;
+            top: 0;
+            // Make padding above / below bar even
+            transform: translate3d(0, -10px, 0);
+            border-bottom: 1px solid $color--grid-line-dark;
+        }
     }
 }
